// Vitest Snapshot v1

exports[`generateListEntry > adds isDone changes 1`] = `
<li
  class="_container_1761de"
  style="order: 1;"
>
  <span
    class="_label_1761de _isDone_1761de"
    data-test="listEntryLabel"
  >
    Test
  </span>
  <div
    class="_buttonWrapper_1761de"
  >
    <button
      class="_button_7c1f96 _button_1761de"
      data-test="listEntryReAddButton"
    >
      <img
        class="_icon_7c1f96"
        src="/src/assets/add-icon.svg"
      />
    </button>
    <button
      class="_button_7c1f96 _button_1761de"
      data-test="listEntryDeleteButton"
    >
      <img
        class="_icon_7c1f96"
        src="/src/assets/delete-icon.svg"
      />
    </button>
  </div>
</li>
`;

exports[`generateListEntry > generates component correctly 1`] = `
<li
  class="_container_1761de"
>
  <span
    class="_label_1761de"
    data-test="listEntryLabel"
  >
    Test
  </span>
  <div
    class="_buttonWrapper_1761de"
  >
    <button
      class="_button_7c1f96 _button_1761de"
      data-test="listEntryDeleteButton"
    >
      <img
        class="_icon_7c1f96"
        src="/src/assets/delete-icon.svg"
      />
    </button>
  </div>
</li>
`;
